@@ -26,6 +26,7 @@ except ImportError:
 from uuid import uuid1
 
 import flask
+from flask import abort
 from flask import request
 from flask import Blueprint
 
@@ -369,7 +370,9 @@ class APIManager(object):
                              serializer=None, deserializer=None,
                              includes=None, allow_to_many_replacement=False,
                              allow_delete_from_to_many_relationships=False,
-                             allow_client_generated_ids=False):
+                             allow_client_generated_ids=False,
+                             hide_disallowed_endpoints=False,
+                             hide_unauthenticated_endpoints=False):
         """Creates and returns a ReSTful API interface as a blueprint, but does
         not register it on any :class:`flask.Flask` application.
 
@@ -565,6 +568,19 @@ class APIManager(object):
         this be a UUID. This is ``False`` by default. For more information, see
         :ref:`creating`.
 
+        If `hide_disallowed_endpoints` is ``True``, requests to
+        disallowed methods (that is, methods not specified in
+        `methods`), which would normally yield a :http:statuscode:`405`
+        response, will yield a :http:statuscode:`404` response
+        instead. If `hide_unauthenticated_endpoints` is ``True``,
+        requests to endpoints for which the user has not authenticated
+        (as specified in the `authentication_required_for` and
+        `authentication_function` arguments) will also be masked by
+        :http:statuscode:`404` instead of :http:statuscode:`403`. These
+        options may be used as a simple form of "security through
+        obscurity", by (slightly) hindering users from discovering where
+        an endpoint exists.
+
         """
         # Perform some sanity checks on the provided keyword arguments.
         if only is not None and exclude is not None:
@@ -727,9 +743,20 @@ class APIManager(object):
             blueprint.add_url_rule(eval_endpoint, methods=eval_methods,
                                    view_func=eval_api_view)
 
+        if hide_disallowed_endpoints:
+            @blueprint.errorhandler(405)
+            def return_404(error):
+                abort(404)
+
+        if hide_unauthenticated_endpoints:
+            @blueprint.errorhandler(403)
+            def return_404(error):
+                abort(404)
+
         # Finally, record that this APIManager instance has created an API for
         # the specified model.
         self.created_apis_for[model] = APIInfo(collection_name, blueprint.name)
+
         return blueprint
 
     def create_api(self, *args, **kw):
